change: changed pom to make finalname include version

--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,7 @@
 
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
     <build>
+        <finalName>${artifactId}-${version}</finalName>
         <defaultGoal>install</defaultGoal>
         <testResources>
             <testResource>
