--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>spring-petclinic</artifactId>
     <version>1.0.2</version>
 
-    <name>${project.artifactId}-${project.version}</name>
+    <name>petclinic</name>
     <packaging>war</packaging>
 
     <properties>
@@ -289,7 +289,7 @@
 
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
     <build>
-        <!-- <finalName>${project.artifactId}-${project.version}</finalName> -->
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <defaultGoal>install</defaultGoal>
         <testResources>
             <testResource>
@@ -329,9 +329,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
-                <configuration>
-                    <warName>petclinic</warName>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
