--- a/pom.xml
+++ b/pom.xml
@@ -420,11 +420,11 @@
     <distributionManagement>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://nexus:8081/nexus/content/repositories/snapshots</url>
+            <url>http://172.24.0.3:8082/artifactory/jenkins-artifactory/snapshots</url>
         </snapshotRepository>
         <repository>
             <id>releases</id>
-            <url>http://nexus:8081/nexus/content/repositories/releases</url>
+            <url>http://172.24.0.3:8082/artifactory/jenkins-artifactory/releases</url>
         </repository>
     </distributionManagement>
 
